tests/negative/test_decl_not_type_id.orb
fnc foo() {}

fnc main() {
    foo x = 0;
}